# versee

./: .gitignore  LICENSE  README.md  output.md  pyproject.toml
src/: app.py
src/versee/: __init__.py  _content.py  _data.py  _debug.py  _file.py  _ref.py  _runner.py  _web.py
tests/: test_data.py
