[project]
name = "versee"
version = "0.1.0"
description = "Extract Bible verses with citation code"
readme = "README.md"
authors = [{ name = "SIKAI ZHANG", email = "matthew.szhang91@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "lxml>=5.3.0",
    "requests>=2.32.3",
    "streamlit>=1.41.1",
]

[project.scripts]
file = "versee:write_file"
debug = "versee:_print_etree"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=7.1.0",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "ruff>=0.9.3",
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
preview = true
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.mypy_cache
  | \.vscode
  | \.venv
  | \.ruff_cache
  | build
  | dist
)/
'''

[tool.ruff]
# max line length for black
line-length = 88
target-version = "py313"
exclude = [".git", "__pycache__", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    # space before : (needed for how black formats slicing)
    "E203",
    # do not assign a lambda expression, use a def
    "E731",
    # do not use variables named 'l', 'O', or 'I'
    "E741",
    # E721 is in preview (july 2024) and gives many false positives.
    # Use `is` and `is not` for type comparisons, or `isinstance()` for
    # isinstance checks
    "E721",
    # F841 is in preview (july 2024), and we don't care much about it.
    # Local variable ... is assigned to but never used
    "F841",
]
